Fixed Firestation and MedicalRecord Controllers IT