@@ -8,7 +8,6 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.safetynet.safetynetAlerts.dtos.JsonFileDatabaseDTO;
 import com.safetynet.safetynetAlerts.factories.MedicalRecordFactory;
 import com.safetynet.safetynetAlerts.models.MedicalRecord;
-import org.assertj.core.util.Lists;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.DisplayName;
@@ -26,6 +25,7 @@ import org.springframework.util.MultiValueMap;
 
 import java.io.File;
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -37,13 +37,18 @@ import static org.assertj.core.api.Assertions.assertThat;
 public class MedicalRecordControllerIT {
 
 
-    private final static String medicalRecordIDURL = "/medicalRecord?firstName={firstName}&lastName={lastName}";
     private static File data;
     private static JsonFactory factory;
     private static JsonFileDatabaseDTO jsonFileDTO;
     @Autowired
     private TestRestTemplate restTemplate;
     private MultiValueMap<String, String> params = new LinkedMultiValueMap<>();
+
+    // URLS
+    private final static String medicalRecordIDURL = "/medicalRecord?firstName={firstName}&lastName={lastName}";
+    private final static String birthDateURLParam = "&birthDate={birthDate}";
+    private final static String medicationsURLParam = "&medications={medications}";
+    private final static String allergiesURLParam = "&allergies={allergies}";
 
     @BeforeAll
     public static void saveData(@Value("${jsondatabase.src}") String src) throws IOException {
@@ -73,21 +78,27 @@ public class MedicalRecordControllerIT {
     @Test
     @DisplayName("POST successful")
     void Given_dataAddedToDatabase_When_POSTMedicalRecord_Then_correspondingDataCanBeRetrieved() throws Exception {
-        MedicalRecord medicalRecord = MedicalRecordFactory.createMedicalRecord(false);
+        MedicalRecord medicalRecord = MedicalRecordFactory.createMedicalRecord(
+                null,
+                null,
+                null,
+                List.of("medic:400mg", "medic2:200mg"),
+                Collections.emptyList(),
+                false);
 
         // Checking that this specific medicalRecord doesn't already exist in database.
         ResponseEntity<MedicalRecord> response = restTemplate.getForEntity(medicalRecordIDURL, MedicalRecord.class, medicalRecord.getFirstName(), medicalRecord.getLastName());
         assertThat(response.getBody())
                 .isNull();
 
-        params.add("firstName", medicalRecord.getFirstName());
-        params.add("lastName", medicalRecord.getLastName());
-        params.add("birthDate", medicalRecord.getBirthDate());
-        params.addAll("medications", medicalRecord.getMedications());
-        params.addAll("allergies", medicalRecord.getAllergies());
-
-        // Actual request
-        restTemplate.postForEntity("/medicalRecord", params, String.class);
+        // Actual POST request
+        restTemplate.postForEntity(medicalRecordIDURL + birthDateURLParam + medicationsURLParam + medicationsURLParam + allergiesURLParam, null, String.class,
+                medicalRecord.getFirstName(),
+                medicalRecord.getLastName(),
+                medicalRecord.getBirthDate(),
+                medicalRecord.getMedications().get(0),
+                medicalRecord.getMedications().get(1),
+                "");
 
         response = restTemplate.getForEntity(medicalRecordIDURL, MedicalRecord.class, medicalRecord.getFirstName(), medicalRecord.getLastName());
         assertThat(response.getBody())
@@ -99,21 +110,26 @@ public class MedicalRecordControllerIT {
     @Test
     @DisplayName("POST no partial data")
     void Given_wrongParameters_When_POSTMedicalRecord_Then_noPartialDataSaved() throws Exception {
-        MedicalRecord medicalRecord = MedicalRecordFactory.createMedicalRecord(false);
+        MedicalRecord medicalRecord = MedicalRecordFactory.createMedicalRecord(
+                null,
+                null,
+                null,
+                Collections.emptyList(),
+                List.of("peanuts", "cats"),
+                false);
 
         // Checking that this specific medicalRecord doesn't already exist in database.
         ResponseEntity<MedicalRecord> response = restTemplate.getForEntity(medicalRecordIDURL, MedicalRecord.class, medicalRecord.getFirstName(), medicalRecord.getLastName());
         assertThat(response.getBody())
                 .isNull();
 
-        params.add("firstName", medicalRecord.getFirstName());
-        params.add("lastName", medicalRecord.getLastName());
-        params.add("birthDate", medicalRecord.getBirthDate());
-        // medications is missing
-        params.addAll("allergies", medicalRecord.getAllergies());
-
-        // Actual request
-        restTemplate.postForEntity("/medicalRecord", params, String.class);
+        // Actual POST request
+        restTemplate.postForEntity(medicalRecordIDURL + birthDateURLParam + allergiesURLParam + allergiesURLParam, null, String.class,
+                medicalRecord.getFirstName(),
+                medicalRecord.getLastName(),
+                medicalRecord.getBirthDate(),
+                medicalRecord.getAllergies().get(0),
+                medicalRecord.getAllergies().get(1));
 
         response = restTemplate.getForEntity(medicalRecordIDURL, MedicalRecord.class, medicalRecord.getFirstName(), medicalRecord.getLastName());
         assertThat(response.getBody())
@@ -123,32 +139,45 @@ public class MedicalRecordControllerIT {
     @Test
     @DisplayName("POST already exists")
     void Given_existingPerson_When_POSTMedicalRecord_Then_personNotReplaced() throws Exception {
-        // Two medicalRecords with same name but different values
-        MedicalRecord existing = MedicalRecordFactory.createMedicalRecord(false);
-        MedicalRecord added = MedicalRecordFactory.createMedicalRecord(existing.getFirstName(), existing.getLastName(), false);
+        // Two medicalRecords with same name but different allergies and birthDate
+        MedicalRecord existing = MedicalRecordFactory.createMedicalRecord(
+                null,
+                null,
+                null,
+                Collections.emptyList(),
+                Collections.emptyList(),
+                false);
+
+        MedicalRecord added = MedicalRecordFactory.createMedicalRecord(
+                existing.getFirstName(),
+                existing.getLastName(),
+                null,
+                Collections.emptyList(),
+                List.of("gluten"),
+                false);
 
 
-        params.add("firstName", existing.getFirstName());
-        params.add("lastName", existing.getLastName());
-        params.add("birthDate", existing.getBirthDate());
-        params.addAll("medications", existing.getMedications());
-        params.addAll("allergies", existing.getAllergies());
-
-        // Preparation request
-        restTemplate.postForEntity("/medicalRecord", params, String.class);
+        // Preparation POST request
+        restTemplate.postForEntity(medicalRecordIDURL + birthDateURLParam + medicationsURLParam + allergiesURLParam, null, String.class,
+                existing.getFirstName(),
+                existing.getLastName(),
+                existing.getBirthDate(),
+                "",
+                "");
 
         // Checking that existing MedicalRecord is actually in database
         ResponseEntity<MedicalRecord> response = restTemplate.getForEntity(medicalRecordIDURL, MedicalRecord.class, existing.getFirstName(), existing.getLastName());
         assertThat(response.getBody())
                 .isNotNull();
 
-        params.clear();
 
-        params.add("firstName", added.getFirstName());
-        params.add("lastName", added.getLastName());
-
-        // Actual request
-        restTemplate.postForEntity("/medicalRecord", params, String.class);
+        // Actual POST request
+        restTemplate.postForEntity(medicalRecordIDURL + birthDateURLParam + medicationsURLParam + allergiesURLParam, null, String.class,
+                added.getFirstName(),
+                added.getLastName(),
+                added.getBirthDate(),
+                "",
+                added.getAllergies().get(0));
 
         // Checking that existing person is unmodified after post
         response = restTemplate.getForEntity(medicalRecordIDURL, MedicalRecord.class, added.getFirstName(), added.getLastName());
@@ -160,40 +189,42 @@ public class MedicalRecordControllerIT {
     @Test
     @DisplayName("UPDATE successful")
     void Given_dataAddedToDatabase_When_UPDATEMedicalRecord_Then_retrievedDataIsAccordinglyUpdated() throws Exception {
-        // Two medicalRecords with same name but different values
-        MedicalRecord existing = MedicalRecordFactory.createMedicalRecord(false);
+        // Two medicalRecords with same name but different medications
+        MedicalRecord existing = MedicalRecordFactory.createMedicalRecord(
+                null,
+                null,
+                null,
+                List.of("test:250mg"),
+                Collections.emptyList(),
+                false);
+
         MedicalRecord updated = MedicalRecordFactory.createMedicalRecord(
                 existing.getFirstName(),
                 existing.getLastName(),
                 existing.getBirthDate(),
-                List.of("test:250mg"),
-                Lists.emptyList(),
+                Collections.emptyList(),
+                existing.getAllergies(),
                 false);
-        //TODO Optionals in parameters with list break method : Empty List is considered empty parameters, which is wrong.
 
-        params.add("firstName", existing.getFirstName());
-        params.add("lastName", existing.getLastName());
-        params.add("birthDate", existing.getBirthDate());
-        params.addAll("medications", existing.getMedications());
-        params.addAll("allergies", existing.getAllergies());
 
-        // Preparation request
-        restTemplate.postForEntity("/medicalRecord", params, String.class);
+        // Preparation POST request
+        restTemplate.postForEntity(medicalRecordIDURL + birthDateURLParam + medicationsURLParam + allergiesURLParam, null, String.class,
+                existing.getFirstName(),
+                existing.getLastName(),
+                existing.getBirthDate(),
+                existing.getMedications().get(0),
+                "");
 
         // Checking that existing MedicalRecord is actually in database
         ResponseEntity<MedicalRecord> response = restTemplate.getForEntity(medicalRecordIDURL, MedicalRecord.class, existing.getFirstName(), existing.getLastName());
         assertThat(response.getBody())
                 .isNotNull();
 
-        params.clear();
-
-        params.add("firstName", updated.getFirstName());
-        params.add("lastName", updated.getLastName());
-        params.addAll("medications", updated.getMedications());
-        params.addAll("allergies", updated.getAllergies());
-
-        // Actual request
-        restTemplate.put("/medicalRecord", params);
+        // MedicalRecord PUT request on 'medications' only
+        restTemplate.put(medicalRecordIDURL + medicationsURLParam, null,
+                updated.getFirstName(),
+                updated.getLastName(),
+                "");
 
         // Checking that existing person is correctly modified after put
         response = restTemplate.getForEntity(medicalRecordIDURL, MedicalRecord.class, updated.getFirstName(), updated.getLastName());
@@ -212,13 +243,11 @@ public class MedicalRecordControllerIT {
         assertThat(response.getBody())
                 .isNull();
 
-        params.add("firstName", updated.getFirstName());
-        params.add("lastName", updated.getLastName());
-        params.addAll("medications", updated.getMedications());
-        params.addAll("allergies", updated.getAllergies());
-
         // Actual request
-        restTemplate.put("/medicalRecord", params);
+        restTemplate.put(medicalRecordIDURL + birthDateURLParam, null,
+                updated.getFirstName(),
+                updated.getLastName(),
+                "14/02/1992");
 
         // Checking that existing person is not added after put
         response = restTemplate.getForEntity(medicalRecordIDURL, MedicalRecord.class, updated.getFirstName(), updated.getLastName());
@@ -229,16 +258,21 @@ public class MedicalRecordControllerIT {
     @Test
     @DisplayName("DELETE successful")
     void Given_dataAddedToDatabase_When_DELETEMedicalRecord_Then_dataCantBeRetrievedAfterDeletion() {
-        MedicalRecord existing = MedicalRecordFactory.createMedicalRecord(false);
+        MedicalRecord existing = MedicalRecordFactory.createMedicalRecord(
+                null,
+                null,
+                null,
+                Collections.emptyList(),
+                Collections.emptyList(),
+                false);
 
-        params.add("firstName", existing.getFirstName());
-        params.add("lastName", existing.getLastName());
-        params.add("birthDate", existing.getBirthDate());
-        params.addAll("medications", existing.getMedications());
-        params.addAll("allergies", existing.getAllergies());
-
-        // Preparation request
-        restTemplate.postForEntity("/medicalRecord", params, String.class);
+        // Preparation POST request
+        restTemplate.postForEntity(medicalRecordIDURL + birthDateURLParam + medicationsURLParam + allergiesURLParam, null, String.class,
+                existing.getFirstName(),
+                existing.getLastName(),
+                existing.getBirthDate(),
+                "",
+                "");
 
         // Checking that existing MedicalRecord is actually in database
         ResponseEntity<MedicalRecord> response = restTemplate.getForEntity(medicalRecordIDURL, MedicalRecord.class, existing.getFirstName(), existing.getLastName());
